# Heracles

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md
heracles/: BUILD.bazel
heracles/include/heracles/: heracles.h
heracles/src/: main.c
include/heracles/: heracles.h
include/kronklab/: kronklab.h
src/: main.c  monotonic.c  private.h  run_bench.c  run_test.c
tests/: test.c
testy/: BUILD.bazel
testy/include/testy/: testy.h
testy/src/: main.c
