load("@rules_cc//cc:defs.bzl", "cc_library")

BUILD_COPTS = [
    "-Wall",
    "-Wextra",
    "-O3",
    "-D_GNU_SOURCE",
]

# Add sources
cc_library(
    name = "testy",
    srcs = glob(["src/**/*.c", "src/**/*.h"], allow_empty = True),
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    copts = BUILD_COPTS,
    visibility = ["//visibility:public"],
)
